--- a/AED2_U1T2.ipynb
+++ b/AED2_U1T2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6/ZNv21p34Rka3o0Rmrjb",
+      "authorship_tag": "ABX9TyOytqqrDmIjg/Xpo+xOMLjT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "id": "NADAWm5xFOkL",
         "outputId": "aa4b382a-9d05-408b-f5ca-fef1a0cdf5d3"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": null,
       "metadata": {
         "id": "VXTjbkKrE8hJ"
       },
@@ -101,7 +101,7 @@
         "id": "p4Tn-IXLjjF6",
         "outputId": "69f4779d-92e6-417d-e037-1bb2db2543ce"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -893,7 +893,7 @@
       "metadata": {
         "id": "6ynGLP_DnCTv"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -910,7 +910,7 @@
         "id": "byLaq3dItJJO",
         "outputId": "76db2d24-9ffe-4a8c-98a3-69554c00f677"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -952,7 +952,7 @@
       "metadata": {
         "id": "R6zw_v4mvzxr"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -973,8 +973,8 @@
         "\n",
         ")\n",
         "\n",
-        "fig = c.draw()\n",
-        "plt.show() # Use plt.show() to display the plot"
+        "c.draw()\n",
+        "plt.show()"
       ],
       "metadata": {
         "colab": {
@@ -982,9 +982,9 @@
           "height": 590
         },
         "id": "Jsfr4wsQJhkM",
-        "outputId": "ddde323c-5930-4aac-9f0c-05b0d494ff9b"
+        "outputId": "a58d13af-ba14-4be2-f50b-0760133f55b7"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -993,7 +993,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-147-c494123c1ff3>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m )\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Use plt.show() to display the plot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-149-22d789f77310>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m )\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Só chama, sem capturar!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# E mostra normalmente\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mTypeError\u001b[0m: BasePlot.draw() takes 0 positional arguments but 1 was given"
           ]
         },
@@ -1012,7 +1012,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "No CircusPlot acima podemos visualizar a assortatividade negativa calculada anteriormente. É possível observar que a maioria dos ingredientes se relacionam mais com ingredientes diferentes, o que é algo justificável, pois do ponto de vista culinário eles se completam.\n",
+        "No CircosPlot acima podemos visualizar a assortatividade negativa calculada anteriormente. É possível observar que a maioria dos ingredientes se relacionam mais com ingredientes diferentes, o que é algo justificável, pois do ponto de vista culinário eles se completam.\n",
         "\n",
         "Por exemplo, proteínas geralmente são acompanhadas de temperos (condimentos) para ganhar sabor, da mesma forma que vegetais muitas vezes são acompanhados por proteínas. Em outras palavras, uma receita precisa de vários tipos de ingredientes diferentes para estar completa, e não apenas um."
       ],
